# thematic-lm

./: .env.example  .gitignore  GETTING_STARTED.md  IMPORT_FIXES.md  IMPORT_FIXES_SUMMARY.md  PHASE_A_CHECKLIST.md  PHASE_A_COMPLETE.md  README.md  TEST_FIXES_COMPLETE.md  identities.yaml  pyproject.toml
.kiro/contracts/: README.md  VALIDATION_REPORT.md
.kiro/settings/: mcp.json.example
.kiro/specs/: AGENTS_SPEC_SUMMARY.md  COMPLETION_STATUS.md  CRITICAL_PIPELINE_SPECS_COMPLETE.md  SPECS_SUMMARY.md
.kiro/specs/code-aggregator/: DEPENDENCIES.yaml  design.md  requirements.md  tasks.md
.kiro/specs/coder-agents/: DEPENDENCIES.yaml  PHASE_B_PART_1_FINAL_REVISION.md  PHASE_B_PART_1_REVISION_SUMMARY.md  PROVIDER_CONTRACT_FINALIZATION.md  design.md  requirements.md  tasks.md
.kiro/steering/: SUMMARY.md  api-standards.md  code-conventions.md  multi-agent-protocols.md  product.md  security-policies.md  structure.md  tech.md  testing-standards.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: generate_remaining_specs.sh  setup_dev.sh  validate_contracts.py  validate_structure.py
src/thematic_lm/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_coder_live.py  test_database.py
tests/unit/: __init__.py  test_agents_types.py  test_api.py  test_coder_dry_run.py  test_coder_integration.py  test_coder_llm.py  test_coder_prompt.py  test_config.py  test_utils_chunking.py  test_utils_identities.py  test_utils_json_safety.py  test_utils_quote_id.py  test_utils_quotes.py  test_utils_retry.py
(+59 files in other folders)
